--- a/package.json
+++ b/package.json
@@ -13,11 +13,18 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
+    "@react-spring/three": "^9.7.5",
+    "@react-three/drei": "^9.122.0",
+    "@react-three/fiber": "8.14.5",
     "@tailwindcss/vite": "^4.0.0",
     "emailjs-com": "^3.2.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "tailwindcss": "^4.0.0"
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-router-dom": "^7.4.0",
+    "react-vertical-timeline-component": "^3.5.3",
+    "tailwindcss": "^4.0.0",
+    "three": "0.157.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
