Bug fixed, contact page additions

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "beautiful-portfolio",
-  "homepage": "https://machadop1407.github.io/pedrotech-portfolio",
+  "name": "bilal-portfolio",
+  "homepage": "https://Bilalnoori7.github.io/PersonalPortfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
