--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bilal-portfolio",
-  "homepage": "https://Bilalnoori7.github.io/PersonalPortfolio",
+  "homepage": "https://bilalnoori7.github.io/PersonalPortfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
